--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,9 +1,9 @@
 :global {
-  body[data-theme="light"] {
+  body[data-theme='light'] {
     --header-color: var(--gray-300);
   }
 
-  body[data-theme="dark"] {
+  body[data-theme='dark'] {
     --header-color: var(--white);
   }
 }
@@ -20,4 +20,8 @@
   font-size: 1.75rem;
   line-height: 1.5;
   font-weight: 700;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
